--- a/myshop/pubspec.yaml
+++ b/myshop/pubspec.yaml
@@ -32,6 +32,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   provider: ^6.0.3
+  intl: ^0.17.0
+  http: ^0.13.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
